fixed contact component alignment

--- a/styles/ContactForm.module.css
+++ b/styles/ContactForm.module.css
@@ -18,6 +18,12 @@
   );
 }
 
+.contact__container {
+  display: flex;
+  flex-direction: column;
+  place-content: center;
+}
+
 .contact__form {
   display: flex;
   flex-direction: column;
